# finlife-api-rust

./: Cargo.toml  DATABASE.local.md  README.fr.md  mysql-deployment.yaml  mysql-pvc.yaml
migrations/: 20260102_init.sql
src/: app.rs  main.rs  metrics_app.rs
src/config/: mod.rs
src/db/: mysql.rs  redis.rs
src/modules/: mod.rs  routes.rs
src/modules/currencies/: currency_command.rs  currency_controller.rs  currency_dto.rs  currency_model.rs  currency_repo.rs  currency_service.rs  mod.rs
src/modules/locations/: location_command.rs  location_controller.rs  location_dto.rs  location_model.rs  location_repo.rs  location_service.rs  mod.rs
src/modules/people/: mod.rs  people_command.rs  people_controller.rs  people_dto.rs  people_model.rs  people_repo.rs  people_service.rs
src/modules/users/auth/: auth_command.rs  auth_controller.rs  auth_dto.rs  auth_service.rs  mod.rs
src/modules/users/user/: mod.rs  user_command.rs  user_controller.rs  user_dto.rs  user_model.rs  user_repo.rs  user_service.rs
src/shared/: crud_repository.rs  errors.rs  log.rs  mod.rs  money.rs  pagination.rs  response.rs  state.rs  utils.rs
src/shared/auth/: jwt.rs  mod.rs  password.rs
src/shared/config/: mod.rs
src/shared/db/: mysql.rs  redis.rs
src/shared/email/: smtp.rs
src/shared/metrics/: metrics_logger.rs  mod.rs  prometheus.rs  registry.rs
src/shared/openapi/: spec.rs
src/shared/security/: encryption.rs
