[package]
name = "finlife-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde"]}

# Web
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }

# Data & utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }

# Config
config = "0.15"
dotenvy = "0.15"

# Password and Security


# JWT and security
jsonwebtoken =  { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
chacha20poly1305 = "0.10"
zeroize = "1.8"
time = { version = "0.3", features = ["std"] }
sha2 = "0.10"

# OpenAPI / Swagger
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = "0.2"

# Databases

## MySql
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "uuid", "chrono", "macros", "rust_decimal"] }

## MongoDB
mongodb = { version = "3"}

## Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "json", "cluster"] }
bb8 = "0.9"
bb8-redis = "0.26"

## NEO4J
neo4rs = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
opentelemetry = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter","fmt","json"] }
#prometheus = "0.14"
lazy_static = "1.5"

# Mail
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
